--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,3 +1,3 @@
-<h3>
-  Current-Truck
-</h3>
+{{#leaflet-map zoomControl=false attributionControl=false lat=40.6943221 lng=-73.93338199999999 zoom=11}}
+  {{tile-layer url='https://{s}.tiles.mapbox.com/v3/edborden.i7622aec/{z}/{x}/{y}.png'}}
+{{/leaflet-map}}
