--- a/app/styles/map.less
+++ b/app/styles/map.less
@@ -1,1 +1,19 @@
 html, body, .leaflet-container, body>div { height: 100% }
+.location-marker {
+  background-image: url('../images/map-marker.png');
+  background-size:     cover;
+  background-repeat:   no-repeat;
+  background-position: center center;
+  width: 40px;
+  height: 40px;
+  position:absolute;
+  text-align: center;
+  line-height: 25px;
+  img {
+    margin-top:3px;
+  }
+  color: black;
+  font-weight: bold;
+  margin-left: -20px;
+  margin-top: -40px;
+}
