--- a/app/styles/map.less
+++ b/app/styles/map.less
@@ -1,6 +1,5 @@
 html, body, .leaflet-container, body>div { height: 100% }
-.location-marker {
-  background-image: url('../images/map-marker.png');
+.a-marker {
   background-size:     cover;
   background-repeat:   no-repeat;
   background-position: center center;
@@ -16,4 +15,14 @@ html, body, .leaflet-container, body>div { height: 100% }
   font-weight: bold;
   margin-left: -20px;
   margin-top: -40px;
+}
+
+.location-marker {
+  .a-marker;
+  background-image: url('../images/map-marker.png');
+}
+
+.red-marker {
+  .a-marker;
+  background-image: url('../images/map-marker-red.png');  
 }
